jenkins-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: jenkins
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
#      initContainers:
#      - name: install-kubectl
#        image: allanlei/kubectl
#        volumeMounts:
#        - name: kubectl
#          mountPath: /data
#        command: ["cp", "/usr/local/bin/kubectl", "/data/kubectl"]
      containers:
        - name: jenkins
          image: amitjoshi/jenkins:1.4
          #image: h1kkan/jenkins-docker:lts
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
#            - name: kubectl
#              subPath: kubectl
#              mountPath: /usr/local/bin/kubectl
        - name: dind-daemon 
          image: docker:1.12.6-dind 
          resources: 
            requests: 
                cpu: 20m 
                memory: 512Mi 
          securityContext: 
             privileged: true 
          volumeMounts: 
            - name: docker-graph-storage 
              mountPath: /var/lib/docker 
      securityContext:
         fsGroup: 1000
         runAsUser: 0
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-pv-claim
        - name: docker-graph-storage 
          emptyDir: {}
#        - name: kubectl
#          emptyDir: {}
