jenkins-test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-test-ingress
  namespace: jenkins
spec:
  rules:
  - host: jenkins-test.ing.teco.online
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
